用户的基本信息已经结束，后期可以能会有一些其他的修改，接下来就是商品的一些信息
