# servers/basic_services.go
@@ -9,7 +9,8 @@ import (
 )
 
 type Basic struct {
-	Phone string `json:"phone"`
+	PhoneNumber string `json:"phone_number"`
+	Email       string `json:"email"`
 }
 
 type BasicServer struct {
@@ -38,7 +39,7 @@ func (BasicServer) SendPhoneCode(c *gin.Context) {
 	}
 
 	code := pkg.GetRandCode()
-	err := pkg.SendPhoneCode(user.Phone, code)
+	err := pkg.SendPhoneCode(user.PhoneNumber, code)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{
 			"code": 500,
@@ -47,7 +48,44 @@ func (BasicServer) SendPhoneCode(c *gin.Context) {
 		return
 	}
 
-	err = dao.RDB.Set(c, user.Phone, code, 300*time.Second).Err()
+	err = dao.RDB.Set(c, user.PhoneNumber, code, 300*time.Second).Err()
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"code": 500,
+			"msg":  "服务器内部错误",
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"msg":  "验证码已经成功发送",
+	})
+	return
+}
+
+// SendEmailCode 向指定手机号发送验证码。
+// @Tags 公共方法
+// @Summary 发送邮箱验证码
+// @Description Send an email verification code to the specified email address
+// @Produce json
+// @Param email formData string true "Email address to send the verification code to"
+// @Success 200 {string} json {"code":200,"msg":"验证码已经成功发送"}
+// @Failure 400 {string} json {"code":400,"msg":"请求参数错误"}
+// @Failure 500 {string} json {"code":500,"msg":"服务器内部错误"}
+// @Router /send_email_code [post]
+func (BasicServer) SendEmailCode(c *gin.Context) {
+	email := c.PostForm("email")
+	code := pkg.GetRandCode()
+	err := pkg.SendEmailVerificationCode(email, code)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"code": 500,
+			"msg":  "服务器内部错误",
+		})
+		return
+	}
+
+	err = dao.RDB.Set(c, email, code, 300*time.Second).Err()
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{
 			"code": 500,
